# proxsuite

./: CMakeLists.txt  pyproject.toml  serial.proto
.github/workflows/: ci-linux-osx-win-conda.yml  ci-linux-ros.yml  ci-osx-arm64-conda.yml  release-linux.yml  release-osx-win.yml  release.yml
benchmark/: CMakeLists.txt  timings-matrix-vector.cpp
bindings/python/src/: expose-qdldl.hpp
examples/cpp/: CMakeLists.txt
examples/python/tsid-humanoid-walking/romeo/urdf/: romeo.urdf
include/proxsuite/helpers/: serialize.hpp
include/proxsuite/linalg/dense/: core.hpp  factorize.hpp  modify.hpp
include/proxsuite/linalg/qdldl/: SparseMatrixHelper.hpp  SparseMatrixHelper.tpp  SuiteSparse_config.h  amd.h  amd_internal.h  constants.h  cs.h  glob_opts.h  kkt.h  lin_alg.h  lin_sys.h  qdldl.h  qdldl_interface.h  qdldl_types.h  types.h
include/proxsuite/linalg/sparse/: factorize.hpp
include/proxsuite/proxqp/dense/: model.hpp  utils.hpp
include/proxsuite/proxqp/sparse/: model.hpp  solver.hpp  utils.hpp  workspace.hpp
include/proxsuite/proxqp/utils/: int128.h  random_qp_problems.hpp
src/: CMakeLists.txt
src/qdldl/: CMakeLists.txt  SuiteSparse_config.c  amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_info.c  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c  cs.c  kkt.c  lin_alg.c  lin_sys.c  qdldl.c  qdldl_interface.c
test/src/: dense_qp_wrapper.cpp
